# ProjetoCD-AMI

./: BELMP.txt  LICENSE  README.md
AMI_Client/: AMI_Client.cpp  AMI_Client.h  AMI_Client.kdev4  CMakeLists.txt  Design.ui  MainWindows.hpp  itoa.cpp  itoa.hpp  main.cpp
AMI_Client/.kdev4/: AMI_Client.kdev4
AMI_Server/: AMI.cpp  AMI.hpp  AMI_Server.kdev4  BELMP.cpp  BELMP.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp  main.cpp
AMI_Server/.kdev4/: AMI_Server.kdev4
